Adicionando cabeçalho da página produtos

--- a/produtos.html
+++ b/produtos.html
@@ -3,20 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>Produtos - Barbearia Alure</title>
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="produtos.css">
     </head>
     <body>
         <header>
-            <h1>
-                <img src="/front/ex1/img/logo.png">
-            </h1>
-            <nav>
-                <ul class="navegacao">
-                    <li><a href="/front/ex1/index.html">Home</a></li>
-                    <li>Produtos</li>
-                    <li>Contatos</li>
-                </ul>
-            </nav>
-        </header>
+            <div class="caixa">
+                <h1>
+                    <img src="/front/ex1/img/logo.png">
+                </h1>
+                <nav>
+                    <ul class="navegacao">
+                        <li><a href="/front/ex1/index.html">Home</a></li>
+                        <li><a href="">Produtos</a></li>
+                        <li><a href="">Contatos</a></li>
+                    </ul>
+                </nav>
+            </div>
+            </header>
     </body>
 </html>
