finalizando a página de produtos

--- a/produtos.html
+++ b/produtos.html
@@ -44,5 +44,10 @@
                     </li>
                 </ul>
         </main>
+
+        <footer>
+            <img src="front/ex1/img/logo-branco.png">
+            <p class="copyright">&copy;Copyright Alura 2025</p>
+        </footer>
     </body>
 </html>
