--- a/produtos.html
+++ b/produtos.html
@@ -10,13 +10,13 @@
         <header>
             <div class="caixa">
                 <h1>
-                    <img src="/front/ex1/img/logo.png">
+                    <img src="/front/ex1/img/logo.png" alt="Logo da Barbearia Alura">
                 </h1>
                 <nav>
                     <ul class="navegacao">
                         <li><a href="/front/ex1/index.html">Home</a></li>
-                        <li><a href="">Produtos</a></li>
-                        <li><a href="">Contatos</a></li>
+                        <li><a href="/produtos.html">Produtos</a></li>
+                        <li><a href="/contato.html">Contatos</a></li>
                     </ul>
                 </nav>
             </div>
