--- a/front/ex1/index.html
+++ b/front/ex1/index.html
@@ -5,6 +5,7 @@
         <title>Barbearia Alura</title>
         <link rel="stylesheet" href="/reset.css">
         <link rel="stylesheet" href="/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -34,6 +35,15 @@
                 <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>    
                 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
             </section>    
+
+            <section class="mapa">
+                <h3 class="titulo-principal">Nosso Estabelecimento</h3>
+                <p>Nosso estabelecimento está localizado no coração da cidade.</p>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4068900057914!2d-46.63469625301303!3d-23.58973609516708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5bd9bb943bf5%3A0x6f642995c970f0fe!2scaelum%20alura!5e0!3m2!1spt-BR!2sbr!4v1742467029482!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            </section>
+
             <section class="beneficios">
                 <h3 class="titulo-principal">Benefícios</h3>
                 <ul>
@@ -43,6 +53,11 @@
                     <li class="itens">Profissionais Qualificados</li>
                 </ul>     
                 <img src="img/beneficios.jpg" class="imagem-beneficios">
+                
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=A39AdR5G-jEcrGpL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+
             </section>  
         </main>
 
