--- a/produtos.html
+++ b/produtos.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Produtos - Barbearia Alure</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <div class="caixa">
-                <h1>
-                    <img src="/front/ex1/img/logo.png" alt="Logo da Barbearia Alura">
-                </h1>
-                <nav>
-                    <ul class="navegacao">
-                        <li><a href="/front/ex1/index.html">Home</a></li>
-                        <li><a href="/produtos.html">Produtos</a></li>
-                        <li><a href="/contato.html">Contatos</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        
-        <main>
-                <ul class="produtos">
-                    <li>
-                        <h2>Cabelo</h2>
-                        <img src="/front/ex1/img/cabelo.jpg">
-                        <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-                        <p class="produto-preco">R$ 25,00</p>
-                    </li>
-                    <li>
-                        <h2>Barba</h2>
-                        <img src="/front/ex1/img/barba.jpg">
-                        <p class="produto-descricao">Corte e desenho profissional de barba</p>
-                        <p class="produto-preco">R$ 18,00</p>
-                    </li>
-                    <li>
-                        <h2>Cabelo + Barba</h2>
-                        <img src="/front/ex1/img/cabelo+barba.jpg">
-                        <p class="produto-descricao">Pacote completo de cabelo e barba</p>
-                        <p class="produto-preco"> R$ 35,00</p>
-                    </li>
-                </ul>
-        </main>
+	<head>
+		<meta charset="UTF-8">
+		<title>Produtos - Barbearia Alura</title>
 
-        <footer>
-            <img src="front/ex1/img/logo-branco.png">
-            <p class="copyright">&copy;Copyright Alura 2025</p>
-        </footer>
-    </body>
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
+
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Cabelo</h2>
+					<img src="cabelo.jpg">
+					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+					<p class="produto-preco">R$ 25,00</p>
+				</li>
+				<li>
+					<h2>Barba</h2>
+					<img src="barba.jpg">
+					<p class="produto-descricao">Corte e desenho profissional de barba</p>
+					<p class="produto-preco">R$ 18,00</p>
+				</li>
+				<li>
+					<h2>Cabelo + Barba</h2>
+					<img src="cabelo+barba.jpg">
+					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+					<p class="produto-preco">R$ 35,00</p>
+				</li>
+			</ul>
+		</main>
+
+		<footer>
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+		</footer>
+	</body>
 </html>
